Support CRuby and JRuby with matching SQLite, Tailwind, and MC JSON.
Detect the Ruby engine at boot, install JDBC or native sqlite3, pin json 2.x for ActiveSupport, provide a host Tailwind CLI under JRuby, and write Monte Carlo results via tempfile so large payloads are not truncated on the R bridge. Also brand the shell with Galaaz lockups.

Co-authored-by: Cursor <cursoragent@cursor.com>